# timsrust_pyo3

./: .pre-commit-config.yaml  Cargo.toml  README.md  README.qmd  deny.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: lib.rs  timsrust_converters.rs  timsrust_enums.rs  timsrust_readers.rs  timsrust_structs.rs
tests/: test_methods.py  test_reading.py
tests/data/: README.md
tests/data/230711_idleflow_400-1000mz_25mz_diaPasef_10sec.d/: analysis.tdf
tests/data/230711_idleflow_400-1000mz_25mz_diaPasef_10sec.d/diaPASEF_TALUS_400_1000_0.7cycle.m/: InstrumentSetup.isset  Maldi.method  diaSettings.diasqlite  microTOFQImpacTemAcquisition.method  submethods.xml
tests/data/230711_idleflow_400-1000mz_25mz_diaPasef_10sec.d/diaPASEF_TALUS_400_1000_0.7cycle.m/backup-2023-07-11.m/: hystar.method  microTOFQImpacTemAcquisition.method  submethods.xml
