[package]
name = "timsrust_pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "timsrust_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
# timsrust = "0.1.7"
timsrust = {git = "https://github.com/jspaezp/timsrust"}
# timsrust = { path = "../timsrust" }
