[package]
name = "timsrust_pyo3"
version = "0.4.1"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "timsrust_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
rayon = "1.10.0"
timsrust = "0.4.1"
