[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "timsrust_pyo3"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
]
lint = [
  "black",
  "ruff"
]
doc = [
  "pyyaml",
  "ipykernel",
  "nbformat",
  "nbclient",
]

[tool.maturin]
features = ["pyo3/extension-module"]
